--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -20,7 +20,7 @@
   <div class="form-row">
     <div class="form-item">
       <label for="assigned">Assigned:</label>
-      <input type="checkbox" id="assigned" name="assigned" onchange="toggleClientDropdown()">
+      <input type="checkbox" id="assigned" name="assigned">
     </div>
     <div class="form-item">
         <label for="active">Active:</label>
@@ -30,13 +30,13 @@
   <div class="form-row">
     <div class="form-item">
       <label for="company">Client - Company name:</label>
-      <select id="company" name="company" disabled>
-          {% for client in clients %}
-          <option value="{{ client.tax_id }}">{{ client.company }}</option>
-          {% endfor %}
-      </select>
+      <input list="companies" type="text" id="company" name="company">
+      <datalist id="companies">
+        {% for client in clients %}
+          <option value="{{ client['company'] }}">
+        {% endfor %}
+      </datalist>
     </div>
-  </div>
     <div class="form-item">
       <label for="contract_id">Contract/Warranty ID:</label>
       <input type="text" id="contract_id" name="contract_id">
@@ -122,21 +122,22 @@
   var leaseRentInput = document.getElementById('lease_rent');
   var priceBlackInput = document.getElementById('price_black');
   var priceColorInput = document.getElementById('price_color');
-  var contractDurationInput = document.getElementById('contract_duration');
+  var contractDurationInput = document.getElementById('contract_duration');  // Added this line
 
+  // Disable the price fields, lease rent field, warranty duration field, and contract duration field initially
   priceBlackInput.disabled = true;
   priceColorInput.disabled = true;
   leaseRentInput.disabled = true;
   warrantyDurationInput.disabled = true;
-  contractDurationInput.disabled = true;
+  contractDurationInput.disabled = true;  // Added this line
 
   warrantyCheckbox.addEventListener('change', function() {
     if (this.checked) {
       serviceContractCheckbox.disabled = true;
-      warrantyDurationInput.disabled = false;
+      warrantyDurationInput.disabled = false;  // Enable the warranty duration field
     } else {
       serviceContractCheckbox.disabled = false;
-      warrantyDurationInput.disabled = true; 
+      warrantyDurationInput.disabled = true;  // Disable the warranty duration field
     }
   });
 
@@ -146,15 +147,15 @@
       warrantyDurationInput.disabled = true;
       priceBlackInput.disabled = false;
       priceColorInput.disabled = false;
-      leaseRentInput.disabled = false;
-      contractDurationInput.disabled = false; 
+      leaseRentInput.disabled = false;  // Enable the lease rent field
+      contractDurationInput.disabled = false;  // Enable the contract duration field
     } else {
       warrantyCheckbox.disabled = false;
       warrantyDurationInput.disabled = false;
       priceBlackInput.disabled = true;
       priceColorInput.disabled = true;
-      leaseRentInput.disabled = true;
-      contractDurationInput.disabled = true;
+      leaseRentInput.disabled = true;  // Disable the lease rent field
+      contractDurationInput.disabled = true;  // Disable the contract duration field
     }
   });
   
@@ -168,12 +169,6 @@
       clientInput.disabled = true;
     }
   });
-
-  function toggleClientInput() {
-    var checkbox = document.getElementById('assigned');
-    var input = document.getElementById('company');
-    input.disabled = !checkbox.checked;
-}
 </script>
 
 {% endblock %}
