--- a/templates/client_printers.html
+++ b/templates/client_printers.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Printers Assigned to Client</h2>
+<h2>Printers Assigned to Client: {{ client_name }}</h2>
 
 {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -14,8 +14,7 @@
 {% endwith %}
 
 {% if printers %}
-  <table>
-    <thead>
+  <table class="table table-striped table-hover"> <!-- Add classes here -->
       <tr>
         <th>Serial Number</th>
         <th>Model</th>
@@ -23,8 +22,6 @@
         <th>Color Counter</th>
         <!-- Add more columns as needed -->
       </tr>
-    </thead>
-    <tbody>
       {% for printer in printers %}
         <tr>
           <td>{{ printer.serial_number }}</td>
@@ -34,7 +31,6 @@
           <!-- Add more cells as needed -->
         </tr>
       {% endfor %}
-    </tbody>
   </table>
 {% else %}
   <p>No printers assigned to this client.</p>
