--- a/templates/service_requests.html
+++ b/templates/service_requests.html
@@ -47,7 +47,7 @@
   {% endfor %}
   </table>
 {% else %}
-  <p>No active service requests.</p>
+  <p class="margin-left">No active service requests.</p>
 {% endif %}
 
 {% endblock %}
