--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -122,22 +122,21 @@
   var leaseRentInput = document.getElementById('lease_rent');
   var priceBlackInput = document.getElementById('price_black');
   var priceColorInput = document.getElementById('price_color');
-  var contractDurationInput = document.getElementById('contract_duration');  // Added this line
+  var contractDurationInput = document.getElementById('contract_duration'); 
 
-  // Disable the price fields, lease rent field, warranty duration field, and contract duration field initially
   priceBlackInput.disabled = true;
   priceColorInput.disabled = true;
   leaseRentInput.disabled = true;
   warrantyDurationInput.disabled = true;
-  contractDurationInput.disabled = true;  // Added this line
+  contractDurationInput.disabled = true; 
 
   warrantyCheckbox.addEventListener('change', function() {
     if (this.checked) {
       serviceContractCheckbox.disabled = true;
-      warrantyDurationInput.disabled = false;  // Enable the warranty duration field
+      warrantyDurationInput.disabled = false; 
     } else {
       serviceContractCheckbox.disabled = false;
-      warrantyDurationInput.disabled = true;  // Disable the warranty duration field
+      warrantyDurationInput.disabled = true;
     }
   });
 
@@ -147,15 +146,15 @@
       warrantyDurationInput.disabled = true;
       priceBlackInput.disabled = false;
       priceColorInput.disabled = false;
-      leaseRentInput.disabled = false;  // Enable the lease rent field
-      contractDurationInput.disabled = false;  // Enable the contract duration field
+      leaseRentInput.disabled = false;  
+      contractDurationInput.disabled = false;  
     } else {
       warrantyCheckbox.disabled = false;
       warrantyDurationInput.disabled = false;
       priceBlackInput.disabled = true;
       priceColorInput.disabled = true;
-      leaseRentInput.disabled = true;  // Disable the lease rent field
-      contractDurationInput.disabled = true;  // Disable the contract duration field
+      leaseRentInput.disabled = true;  
+      contractDurationInput.disabled = true; 
     }
   });
   
