--- a/templates/clients.html
+++ b/templates/clients.html
@@ -23,7 +23,7 @@
             </tr>
             {% for client in clients %}
             <tr>
-                <td><a href="{{ url_for('edit_client', client_id=client.tax_id) }}">{{ client.tax_id }}</a></td>
+                <td><a href="{{ url_for('edit_client', tax_id=client.tax_id) }}">{{ client.tax_id }}</a></td>
                 <td>{{ client.company }}</td>
                 <td>{{ client.city }}</td>
                 <td>{{ client.postal_code }}</td>
@@ -31,7 +31,7 @@
                 <td>{{ client.phone }}</td>
                 <td>{{ client.email }}</td>
                 <td>
-                    <a href="{{ url_for('client_printers', client_id=client.tax_id) }}">View Printers</a>
+                    <a href="{{ url_for('client_printers', tax_id=client.tax_id) }}">View Printers</a>
                 </td>
             </tr>
             {% endfor %}
