--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -63,9 +63,15 @@ form {
   .button-group button, .button-group input[type="submit"] {
     background-color: #E0EFFF;
     color: #656263;
-    border: none;
+    border: 1px solid #80bdff;
     border-radius: 5px;
     padding: 10px;
+  }
+
+  .button-group button:hover, .button-group input[type="submit"]:hover {
+    text-decoration: none;
+    color: #545454;
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);
   }
 
 .vh-100 {
@@ -163,3 +169,11 @@ a:hover {
 .margin-left {
   margin-left: 3%;
 }
+
+.pagination {
+  margin-top: 10px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
