--- a/templates/base.html
+++ b/templates/base.html
@@ -50,10 +50,7 @@
                             <a class="nav-link" href="{{ url_for('register') }}">Add a new user</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('service_request') }}">Service Requests</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('new_service_request') }}">New Service Request</a>
+                            <a class="nav-link" href="{{ url_for('service_requests') }}">Service Requests</a>
                         </li>
                     {% endif %}
                 {% endif %}
