--- a/templates/service_requests.html
+++ b/templates/service_requests.html
@@ -3,8 +3,20 @@
 {% block content %}
 
 <style>
-  .styled-table th:nth-child(6) {
+  .styled-table th:nth-child(6), .styled-table th:nth-child(7) {
     width: 200px;
+  }
+  .button-group {
+    background-color: #E0EFFF;
+    color: #656263;
+    border: 1px solid #80bdff;
+    border-radius: 5px;
+    padding: 10px;
+  }
+  .button-group:hover {
+    text-decoration: none;
+    color: #545454;
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);
   }
 </style>
 
@@ -21,6 +33,7 @@
         <th>Printer Model</th>
         <th>Date</th>
         <th>Assigned to:</th>
+        <th>Delete?</th>
       </tr>
       {% for request in service_requests %}
       <tr>
@@ -37,12 +50,25 @@
               {% endfor %}
             </select>
             <input type="hidden" name="request_id" value="{{ request.id }}">
-            <input type="submit" value="Assign">
+            <button type="submit" class="button-group">Assign</button>
+          </form>
+        </td>
+        <td>
+          <form action="{{ url_for('delete_request', id=request.id) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this service request?');">
+            <input type="image" src="{{ url_for('static', filename='img/del_ico.png') }}" alt="Delete" style="display: block; margin: auto;">
           </form>
         </td>
       </tr>
   {% endfor %}
   </table>
+  <div class="pagination">
+    <a href="{{ url_for('service_requests', page=1) }}">First..</a>&nbsp;
+    {% if page > 1 %}
+    <a href="{{ url_for('service_requests', page=page-1) }}">..Previous..</a>&nbsp;
+    {% endif %}
+    <span>..Page {{ page }}..</span>&nbsp;
+    <a href="{{ url_for('service_requests', page=page+1) }}">..Next</a>
+  </div>
 {% else %}
   <p class="margin-left">No active service requests.</p>
 {% endif %}
