--- a/templates/my_requests.html
+++ b/templates/my_requests.html
@@ -15,6 +15,7 @@
       <th>Printer Serial Number</th>
       <th>Printer Model</th>
       <th>Request Date</th>
+      <th>Done?</th>
     </tr>
     {% for request in service_requests %}
       <tr>
@@ -23,6 +24,12 @@
         <td>{{ request.serial_number }}</td>
         <td>{{ request.model }}</td>
         <td>{{ request.request_date }}</td>
+        <td>
+          <form method="POST" action="{{ url_for('mark_done') }}" onsubmit="return confirm('Are you sure you want to mark this service request as done?');">
+            <input type="hidden" name="request_id" value="{{ request_id }}">
+            <input type="image" src="{{ url_for('static', filename='img/ok_ico.png') }}" alt="Done" style="display: block; margin: auto;">
+          </form>
+        </td>
       </tr>
     {% endfor %}
   </table>
