Modified handling printer data, to include print history, for graph generation, added graph generation using pygal

--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -100,7 +100,7 @@
   </div>
   <div class="button-group">
     <input type="submit" value="Submit">
-    <button type="button" onclick="window.location.href='/index'">Back</button>
+    <button type="button" onclick="window.location.href='/index'">Discard</button>
   </div>
   <div><span class="required">*</span> - required field.</div>
 </form>
