--- a/templates/client_printers.html
+++ b/templates/client_printers.html
@@ -14,22 +14,30 @@
 {% endwith %}
 
 {% if printers %}
-  <table class="table table-striped table-hover"> <!-- Add classes here -->
+  <table class="table table-striped table-hover">
       <tr>
         <th>Serial Number</th>
         <th>Model</th>
         <th>Black Counter</th>
         <th>Color Counter</th>
-        <th>Action</th> <!-- New column for the action link -->
+        <th>Action</th>
+        <th>Details</th>
       </tr>
       {% for printer in printers %}
         <tr>
-          <td>{{ printer.serial_number }}</td>
+          <td>
+            <!-- Add hyperlink to the serial number -->
+            <a href="{{ url_for('edit_printer', printer_id=printer.id) }}">{{ printer.serial_number }}</a>
+          </td>
           <td>{{ printer.model }}</td>
           <td>{{ printer.black_counter }}</td>
           <td>{{ printer.color_counter }}</td>
           <td>
-            <a href="{{ url_for('new_service_request_for_printer', tax_id=printer.tax_id, printer_id=printer.id, printer_serial_number=printer.serial_number) }}">New Service Request</a>          </td> <!-- New cell for the action link -->
+            <a href="{{ url_for('new_service_request_for_printer', tax_id=printer.tax_id, printer_id=printer.id, printer_serial_number=printer.serial_number) }}">New Service Request</a>
+          </td>
+          <td>
+            <a href="{{ url_for('printer_info', printer_id=printer.id) }}">Display</a>
+          </td>
         </tr>
       {% endfor %}
   </table>
