--- a/templates/clients.html
+++ b/templates/clients.html
@@ -8,8 +8,12 @@
 
 <div class="center-container">
   <form action="{{ url_for('clients') }}" method="get">
+    <div class="form-item">
       <input type="text" name="filter" placeholder="Filter: name or tax id...">
-      <input type="submit" value="Filter">
+    </div>
+    <div class="button-group">
+      <button type="submit">Filter</button>
+    </div>
   </form>
 </div>
 
