--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -177,3 +177,30 @@ a:hover {
   margin-right: auto;
 }
 
+.history-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.history-section {
+  width: 50%;
+}
+
+.scrollable-table {
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.styled-button {
+  background-color: #E0EFFF;
+  color: #656263;
+  border: 1px solid #80bdff;
+  border-radius: 5px;
+  padding: 10px 20px 10px 20px;
+}
+
+.styled-button:hover {
+  text-decoration: none;
+  color: #545454;
+  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+}
