--- a/templates/my_requests.html
+++ b/templates/my_requests.html
@@ -16,6 +16,7 @@
       <th>Printer Model</th>
       <th>Request Date</th>
       <th>Done?</th>
+      <th style="width: 20%;">PDF Report</th>
     </tr>
     {% for request in service_requests %}
       <tr>
@@ -29,6 +30,13 @@
             <input type="hidden" name="request_id" value="{{ request_id }}">
             <input type="image" src="{{ url_for('static', filename='img/ok_ico.png') }}" alt="Done" style="display: block; margin: auto;">
           </form>
+        </td>
+        <td>
+          <div class="button-group">
+            <form method="POST" action="{{ url_for('generate_pdf', request_id=request.id) }}">
+              <button type="submit" style="width: 80px;">Generate</button>
+            </form>
+          </div>
         </td>
       </tr>
     {% endfor %}
