--- a/templates/printer_info.html
+++ b/templates/printer_info.html
@@ -32,14 +32,35 @@
   </tr>
 </table>
 
-<h3>Service Requests</h3>
-{% for request in service_requests %}
-<p>Date: {{ request.request_date }}, Problem: {{ request.service_request }}</p>
-{% endfor %}
+<div class="history-container">
+  <div class="history-section">
+    <h3>Service Requests History</h3>
+    <div class="scrollable-table">
+      <table>
+        {% for request in service_requests %}
+        <tr>
+          <td>Date: {{ request.request_date }}, Problem: {{ request.service_request }}</td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
 
-<h3>Print History</h3>
-{% for history in print_history %}
-<p>Date: {{ history.date }}, Black Counter: {{ history.counter_black_history }}, Color Counter: {{ history.counter_color_history }}</p>
-{% endfor %}
+  <div class="history-section">
+    <h3>Print History</h3>
+    <div class="scrollable-table">
+      <table>
+        {% for history in print_history %}
+        <tr>
+          <td>Date: {{ history.date }}, Black Counter: {{ history.counter_black_history }}, Color Counter: {{ history.counter_color_history }}</td>
+          {% if history.black_cost is defined and history.color_cost is defined %}
+          <td>Black Cost: {{ history.black_cost }}, Color Cost: {{ history.color_cost }}</td>
+          {% endif %}
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
