Edited default values in register_admin.html, so the operator can type it in

--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -23,49 +23,49 @@
   <div class="form-row">
     <div class="form-item">
       <label for="email">Email:<span class="required">*</span></label>
-      <input type="email" id="email" name="email" value="a@s.s" required>
+      <input type="email" id="email" name="email" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="company_name">Company Name:<span class="required">*</span></label>
-      <input type="text" id="company_name" name="company_name" value="Test Company" required>
+      <input type="text" id="company_name" name="company_name" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="tax_id">Tax ID:<span class="required">*</span></label>
-      <input type="text" id="tax_id" name="tax_id" value="9990011999" required>
+      <input type="text" id="tax_id" name="tax_id" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="address">Address:<span class="required">*</span></label>
-      <input type="text" id="address" name="address" value="Test Road 15" required>
+      <input type="text" id="address" name="address" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="postal_code">Postal Code:<span class="required">*</span></label>
-      <input type="text" id="postal_code" name="postal_code" value="53500" required>
+      <input type="text" id="postal_code" name="postal_code" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="city">City:<span class="required">*</span></label>
-      <input type="text" id="city" name="city" value="Test City" required>
+      <input type="text" id="city" name="city" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="phone">Phone:<span class="required">*</span></label>
-      <input type="text" id="phone" name="phone" value="500000000" required>
+      <input type="text" id="phone" name="phone" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="company_email">Company Email:<span class="required">*</span></label>
-      <input type="email" id="company_email" name="company_email" value="asd@asd.pl" required>
+      <input type="email" id="company_email" name="company_email" required>
     </div>
   </div>
   <div class="button-group">
