--- a/templates/my_requests.html
+++ b/templates/my_requests.html
@@ -27,7 +27,7 @@
         <td>{{ request.request_date }}</td>
         <td>
           <form method="POST" action="{{ url_for('mark_done') }}" onsubmit="return confirm('Are you sure you want to mark this service request as done?');">
-            <input type="hidden" name="request_id" value="{{ request_id }}">
+            <input type="hidden" name="request_id" value="{{ request.id }}">
             <input type="image" src="{{ url_for('static', filename='img/ok_ico.png') }}" alt="Done" style="display: block; margin: auto;">
           </form>
         </td>
